--- a/Circuits.html
+++ b/Circuits.html
@@ -64,71 +64,115 @@ if (typeof(mylink) == 'string')
    href=mylink;
 else
    href=mylink.href;
-window.open(href, windowname, 'width=400,height=200,scrollbars=yes');
+window.open(href, windowname, 'width=600,height=600,scrollbars=yes');
 return false;
 }
 //-->
 </SCRIPT>
 
 <h2>Circuits and Circuit Elements</h2>
-<p>A <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">circuit</A></span> is the interconnection of electrical devices in a circular path. To power the circuit, voltage is generated from a power source and moves through the wires and components. <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Voltage</A></span> is the total work per unit charge associated with the motion of charge between two points. The rate at which the electrical charge is flowing through a wire or conductor is called <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">current</A></span>. Both current and voltage are required to achieve electrical power. </p>
+<p>A <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">circuit</A></span> is the interconnection of electrical 
+devices in a circular path. To power the circuit, voltage is generated from a power source and 
+moves through the wires and components. <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Voltage</A></span> is the total work per unit charge 
+associated with the motion of charge between two points. The rate at which the electrical 
+charge is flowing through a wire or conductor is called <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">current</A></span>. Both current and voltage are required 
+to achieve electrical power. </p>
 
 	<center><img src="Circuit_Pictures/Power.png" HEIGHT="150px" /></center>
-	<center><span class="captionStyle">Equation 1: Power Relation to Voltage and Current</span></center>
+	<center><span class="captionStyle">Power Relation to Voltage and Current</span></center>
 	<br>
 	
-<p> Some people have trouble conceptualizing electricity because they cannot see it. Try considering the circuit to instead be a system of pipes. Each pipe is essentially a very large wire. The power source, which is essentially a pump, takes in charge with low voltage and outputs charge with high voltage. Similarly, a pump which takes in water of low pressure and pushes out higher pressure water.  The flow rate of the water moving through the pipe would be the voltage. Water flows from areas of high pressure to low pressure; likewise, electricity flows from areas of high voltage to low voltage. The speed at which water moves through a pipe is the current. The size of the pipe acts as resistance. If the pipe is very large, the resistance is very low and the water can flow freely; if the pipe is small, the water flow is much more restricted. Small resistors are basically large pipes, and large resistors are small pipes. </p>
+<p> Some people have trouble conceptualizing electricity because they cannot see it. Try 
+considering the circuit to instead be a system of pipes. Each pipe is essentially a very large 
+wire. The power source, which is essentially a pump, takes in charge with low voltage and outputs 
+charge with high voltage. Similarly, a pump which takes in water of low pressure and pushes out 
+higher pressure water.  The flow rate of the water moving through the pipe would be the voltage. 
+Water flows from areas of high pressure to low pressure; likewise, electricity flows from areas of 
+high voltage to low voltage. The speed at which water moves through a pipe is the current. The 
+size of the pipe acts as resistance. If the pipe is very large, the resistance is very low and the 
+water can flow freely; if the pipe is small, the water flow is much more restricted. Small 
+resistors are basically large pipes, and large resistors are small pipes. </p>
 <center><img src="Circuit_Pictures/WaterResistance.png" HEIGHT="200px" /></center>
-<center><span class="captionStyle">Figure 1: Resistance Related to Water Pipe Analogy</span></center>
+<center><span class="captionStyle">Resistance Related to Water Pipe Analogy</span></center>
 	
 <p>
 <TABLE>
    <TR>
-      <TD WIDTH=80% ALIGN=LEFT> <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Resistance</A></span>, measured in Ohms, of an electrical component is when current opposes, or resists, flowing through that component. The most common electrical component to induce resistance is a <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Resistor</A></span>. It is important to remember that resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will oppose current. Most resistors have two or three colored bands to denote the resistance followed by either a silver or gold band to denote the tolerance level.</TD>
+      <TD WIDTH=80% ALIGN=LEFT> <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Resistance</A></span>, measured in Ohms, of an electrical 
+component is when current opposes, or resists, flowing through that component. The most common 
+electrical component to induce resistance is a <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Resistor</A></span>. It is important to remember that 
+resistors <b>always</b> dissipate power. Resistors are color coded to show how much they will 
+oppose current. Most resistors have two or three colored bands to denote the resistance 
+followed by either a silver or gold band to denote the tolerance level.</TD>
    
       <TD ALIGN=CENTER><img src="Circuit_Pictures/Resistor.png" ALIGN="right" HEIGHT="100px" /></TD>
    </TR>
    <TR>
-      <TD WIDTH=80% ALIGN=LEFT> <span class="vocabColor"></TD>
+      <TD WIDTH=80% ALIGN=LEFT> </TD>
    
-      <TD WIDTH=10%><center><span class="captionStyle">Figure 2: Typical Resistor</span></center></TD>
+      <TD WIDTH=10%><center><span class="captionStyle">Typical Resistor</span></center></TD>
    </TR>
 </TABLE>
  </p>
  
-	<center><img src="Circuit_Pictures/Values.png" HEIGHT="250px" /></center>
-	<center><span class="captionStyle">Table 1: Reference for Calculating Resistor Values</span></center>
+	<center><img src="Circuit_Pictures/Values.png" HEIGHT="300px" /></center>
+	<center><span class="captionStyle">Reference for Calculating Resistor Values</span></center>
 	<br><br>
 <h3>Ohm's Law</h3>	
-<p>Resistance and current can be used to determine voltage with <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Ohm's Law</A></span>. Ohm’s law is the most important equation for basic circuitry. </p>
+<p>Resistance and current can be used to determine voltage with <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Ohm's Law</A></span>. Ohm’s law is the most important 
+equation for basic circuitry. </p>
 
-	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center
+	<center><img src="Circuit_Pictures/Ohms.png" HEIGHT="150px" /></center>
+	<center><span class="captionStyle">Ohm's Law</span></center>
 	
 <p>That equation can then be substituted into the Power equation from before. </p>
 
 	<center><img src="Circuit_Pictures/Power_Equivalence.png" HEIGHT="60px" /></center>
+	<center><span class="captionStyle">Variations on Power Formula</span></center>
 	
 <p><h3>More Vocab:</h3></p>
-<p><span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Node</A></span>: A point in a circuit where two or more components are connected </p>
-<p><span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Loop</A></span>: An ordered sequence of nodes forming a closed path </p>
+<p><span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Node</A></span>: A point in a circuit where two or more 
+components are connected </p>
+<p><span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Loop</A></span>: An ordered sequence of nodes forming a 
+closed path </p>
 
 <p><h2>Parallel and Series Resistors</h2></p>
 
-<p>Solving a circuit requires simplifying by combining similar elements. In order to for a circuit with multiple resistors to be solved, the resistors must first be simplified into one total, equivalent resistance. The first step to simplifying resistance is determining whether the resistors are in series or parallel. </p>
+<p>Solving a circuit requires simplifying by combining similar elements. In order to for a circuit 
+with multiple resistors to be solved, the resistors must first be simplified into one total, 
+equivalent resistance. The first step to simplifying resistance is determining whether the 
+resistors are in series or parallel. </p>
 	
-<p>Two elements are in <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">series</A></span> if they share a node with no other elements connected at the node. Resistors in series add together to get an equivalent resistance. In the figure below, resistors A and B are in series. Two elements are in <span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">parallel</A></span> if they form a loop with no other elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. In the figure below, resistors C and D are in parallel. </p>
+<p>Two elements are in <span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">series</A></span> if they share a node with no other 
+elements connected at the node. Resistors in series add together to get an equivalent 
+resistance. In the figure below, resistors A and B are in series. Two elements are in <span 
+class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">parallel</A></span> if they form a loop with no other 
+elements in the loop. Resistors in parallel combine by adding the reciprocal sum of each value. 
+In the figure below, resistors C and D are in parallel. </p>
 
 <center><img src="Circuit_Pictures/Parallel_Series.png" HEIGHT="100px" /></center>
+<center><span class="captionStyle">Equations for Reducing Parallel and Series Resistors
+</span></center>
 
 
 
@@ -136,51 +180,60 @@ return false;
 
 <TABLE ALIGN = CENTER>
    <TR>
-      <TD WIDTH=50% ALIGN=CENTER><img src="Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /></TD>
-      <TD WIDTH=50% ALIGN=CENTER><img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" /></TD>
+      <TD WIDTH=50% ALIGN=CENTER><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/ResistanceExample.html" 
+   onClick="return popup(this, 'Resistance Example')"><img src=
+"Circuit_Pictures/Example_Circuit.png"  HEIGHT="200px" /></A></TD>
+      <TD WIDTH=50% ALIGN=CENTER><img src="Circuit_Pictures/Example_Values.png"  HEIGHT="150px" />
+</TD>
    </TR>
 </TABLE>
-
-<TABLE>
-   <TR>
-      <TD WIDTH=75% ALIGN=CENTER> First, recognize the series and parallel resistors in this circuit. Start by reducing resistors A and B into an equivalent resistance:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/RAB.png"  HEIGHT="50px" /><br><br></TD>
-   </TR>
-    <TR>
-      <TD WIDTH=75% ALIGN=CENTER>Next, reduce the parallel resistors C and D:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/RCD.png"  HEIGHT="100px" /><br><br></TD>
-   </TR>
-   <TR>
-      <TD WIDTH=75% ALIGN=CENTER>Third, reduce series resistors E, F and G:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/REFG.png"  HEIGHT="50px" /><br><br></TD>
-   </TR> 	
-   <TR>
-      <TD WIDTH=75% ALIGN=CENTER>The new configuration would look like this:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/Simplified.png"  HEIGHT="150px" /><br><br></TD>
-   </TR> 
-   <TR>
-      <TD WIDTH=75% ALIGN=CENTER>Now, solve RCD and REFG which are in parallel:</TD>
-      <TD WIDTH=25% ALIGN=CENTER><img src="Circuit_Pictures/RCG.png"  HEIGHT="75px" /><br><br></TD>
-   </TR>
-   <TR>
-      <TD WIDTH=75% ALIGN=CENTER>Finally, solve the equation by adding the equivalent resistances since they are in series:</TD>
-      <TD WIDTH=25 ALIGN=CENTER><img src="Circuit_Pictures/RTotal.png"  HEIGHT="50px" /><br></TD>
-   </TR>
-</TABLE>
+<br>
+<p><center>Try to reduce the circuit above. Click on the circuit for the solution.</center></p>
+<br><br>
 
 <h2>Explanation of Series and Parallel</h2>
-<p>Why do series resistors simply add together while parallel ones are so much more different? The reasoning lies in how the current moves through the circuit. When resistors are in series current is able to flow through all of the resistors in a single loop. So the equivalent resistance of series resistors has to be larger than the largest resistor in the circuit. However when resistors are in parallel the current has to split between the loops created by the parallel resistors. This means that the equivalent resistance will always be smaller than the smallest resistor in the loop. It is important to note that when current flows through a loop of parallel resistors, it splits in a way that is proportional to the resistance of the resistors; higher resistors will have less current flowing through them and vice versa to ensure that there is the same amount of voltage going through the entire circuit. </p>
+<p>Why do series resistors simply add together while parallel ones are so much more different? The 
+reasoning lies in how the current moves through the circuit. When resistors are in series current 
+is able to flow through all of the resistors in a single loop. So the equivalent resistance of 
+series resistors has to be larger than the largest resistor in the circuit. However when resistors 
+are in parallel the current has to split between the loops created by the parallel resistors. This 
+means that the equivalent resistance will always be smaller than the smallest resistor in the 
+loop. It is important to note that when current flows through a loop of parallel resistors, it 
+splits in a way that is proportional to the resistance of the resistors; higher resistors will 
+have less current flowing through them and vice versa to ensure that there is the same amount of 
+voltage going through the entire circuit. </p>
 
 <p><h2>Kirchoff's Voltage and Current Laws</h2></p>
-<p><span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Kirchoff's Voltage Law(KVL)</A></span> says that the algebraic sum of the voltages around a loop is zero. To solve a circuit with KVL sum all the voltages, paying attention to the polarity of the voltage sources. </p>
+<p><span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Kirchoff's Voltage Law(KVL)</A></span> says that the 
+algebraic sum of the voltages around a loop is zero. To solve a circuit with KVL sum all the 
+voltages, paying attention to the polarity of the voltage sources. </p>
+   <TABLE>
+   <TR>
+   <TD WIDTH=50%><img src="Circuit_Pictures/KVL.png"  HEIGHT="75px" /img></TD>
+   <TD WIDTH=50%><img src="Circuit_Pictures/Voltages.png" HEIGHT="200px" /img></TD>
+   </TR>
+   </TABLE>
+<br><br>
+<p><span class="vocabColor"><A HREF="
+file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
+   onClick="return popup(this, 'Vocab')">Kirchoff's Current Law(KCL)</A></span> says that the 
+algebraic sum of all the currents entering a node is zero. To solve a circuit with KCL, the sum 
+of all the currents leaving a node should be subtracted from all currents entering that same 
+node with any unknown values left as variables.</p>
+<TABLE>
+<TR>
+	<TD ALIGN=50%><img src="Circuit_Pictures/KCL.png" HEIGHT="100px" /img></TD>
+	<TD ALIGN=50%><img src="Circuit_Pictures/currents.png" HEIGHT="200px" /img></TD>
+</TR>
+</TABLE>
+<br>
+<p>In the drawing above, the two nodes can essentially be considered one node. This is
+because there are no electrical components between them. Remember that changing the sign of the current will change the direction in which it is travelling. </p>
 
-<p><span class="vocabColor"><A HREF="file:///C:/Users/Owner/Documents/GitHub/rbe1001book/Circuit%20Vocab.html" 
-   onClick="return popup(this, 'Vocab')">Kirchoff's Current Law(KCL)</A></span> says that the algebraic sum of all the currents entering a node is zero. To solve a circuit with KCL, the sum of all the currents leaving a node should be subtracted from all currents entering that same node with any unknown values left as variables.
-</p>
 
-<p>In the above drawing, the two nodes in the picture can essentially be considered one node because there are no electrical components between them. In order to adjust this circuit so that all currents are entering the node, make the 2 Amps leaving the node negative. The KCL equation should look like this:
-</p>
 <!-- CONTENT END -->
 </div>
 
